# alpha-gen

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  SPECS.md  justfile  pyproject.toml  pyrightconfig.json
.zed/: debug.json
ci/: .gitkeep  README.md  credentials.yml.example  generate-cosign-keys.sh  pipeline.yml
docs/: PGVECTOR_SETUP.md
src/alpha_gen/: __init__.py  main.py
src/alpha_gen/agents/: __init__.py  base.py  news.py  opportunities.py  research.py
src/alpha_gen/cli/: __init__.py  base.py  decorators.py  helpers.py  main.py
src/alpha_gen/cli/commands/: __init__.py  analyze.py  gather.py  news.py  opportunities.py  research.py
src/alpha_gen/config/: __init__.py  settings.py
src/alpha_gen/core/: __init__.py
src/alpha_gen/core/agents/: __init__.py  gather.py  news.py  opportunities.py  research.py  retrieval.py
src/alpha_gen/core/config/: __init__.py  settings.py
src/alpha_gen/core/data_sources/: __init__.py  alpha_vantage.py  yahoo_finance.py
src/alpha_gen/core/rag/: __init__.py  base.py  chroma_store.py  pgvector_store.py  vector_store.py
src/alpha_gen/core/utils/: __init__.py  logging.py  observability.py
src/alpha_gen/data_sources/: __init__.py  alpha_vantage.py  base.py
src/alpha_gen/rag/: __init__.py  vector_store.py
src/alpha_gen/scrapers/: __init__.py  base.py  yahoo_finance.py
src/alpha_gen/utils/: __init__.py  logging.py  observability.py
tests/: __init__.py  test_config.py  test_data_sources.py  test_helpers.py  test_scrapers.py  test_yahoo_finance.py
